--- a/css/index.css
+++ b/css/index.css
@@ -1,59 +1,17 @@
-#canvas1{
-	background: url(../images/bg.jpg);
-	background-size: cover;
-	position: absolute;
-	left: 50%;
-	margin-left: -300px;
-	z-index: 2;
+body{
+	margin:0;
 }
-#canvas2{
-	position: absolute;
-	left: 50%;
-	margin-left: -300px;
-	z-index: 3;
-	cursor: pointer;
-}
-#stop{
-	width: 600px;
-	height: 600px;
-	position: absolute;
-	left: 50%;
-	margin-left: -300px;
-	z-index: 99;
-	cursor: pointer;
-	display: none;
-}
-#reset{
-	position: absolute;
-	top: 200px;
-	left: 50%;
-	margin-left: -400px;
-	width: 60px;
-	height: 30px;
-	border: 1px solid #bb8e64;
-	text-align: center;
-	list-style: 30px;
-	font-family: '微软雅黑';
-	font-size: 20px;
-	background: url(../images/btn.jpg);
-	font-weight: bold;
-	cursor: pointer;
-}
-#regret{
-	position: absolute;
-	top: 350px;
-	left: 50%;
-	margin-left: -400px;
-	width: 60px;
-	height: 30px;
-	border: 1px solid #bb8e64;
-	text-align: center;
-	list-style: 30px;
-	font-family: '微软雅黑';
-	font-size: 20px;
-	background: url(../images/btn.jpg);
-	font-weight: bold;
-	cursor: pointer;
+#canvas{
+    display: block;
+    position: absolute;
+    margin:auto;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    cursor: pointer;
+    background: url(../images/bg.jpg);
+    background-size: cover;
 }
 #win{
 	width: 300px;
